adding images and responsiveness

--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
         </ul>
       </section>
     </nav>
+    <div class="wrapper">
     <div id="main-container"></div>
+    <div class="push"></div>
     <div class="row">
       <div class="large-12 columns">
         <footer>&copy; 2013 Scott L. Norvell</footer>
       </div>
+    </div>
     </div>
 
     <script src="js/jquery.min.js"></script>
