--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <ul class="right">
           <li><a href="http://scottlnorvell.com/resume" target="_blank" >Resume</a></li>
           
-          <li class="has-dropdown">
+          <!-- <li class="has-dropdown">
 
             <a href="#">Go There</a>
-            <ul class="dropdown">
+            <ul class="dropdown"> -->
               <li><a href="#about">About</a></li>
               <li><a href="#apps">Apps</a></li>
               <li><a href="#experimental">Experimental</a></li>
               <li><a href="#blog">Blog</a></li>
-            </ul>
-          </li>
+          <!--   </ul>
+          </li> -->
         </ul>
 
         <!-- Left Nav Section -->
